--- a/philo/Makefile
+++ b/philo/Makefile
@@ -1,19 +1,25 @@
 NAME = philo
-COMPILER = gcc -std=c89
-FLAGS = -Wall -Wextra -Werror -pedantic
+CC = gcc 
+CFLAGS = -Wall -Wextra -Werror
 THR = -lpthread
 INCLUDES = philosofers.h
-SOURCES = libft.c check_arg.c time.c dead.c\
-	mutex.c pthread.c actions.c eat.c\
+SOURCES = \
+	libft.c \
+	check_arg.c \
+	time.c \
+	dead.c \
+	mutex.c \
+	pthread.c \
+	actions.c \
+	eat.c\
 	main.c
-OBJECT = $(SOURCES:.c=.o)
+OBJECTS = $(SOURCES:.c=.o)
 
 .PHONY: all clean fclean f re
 
 all: $(NAME)
-$(NAME): $(SOURCES) $(INCLUDES)
-	$(COMPILER) $(FLAGS) -c $(SOURCES)
-	$(COMPILER) $(OBJECT) $(THR) -o $(NAME)
+$(NAME): $(OBJECTS) $(INCLUDES)
+	$(CC) $(CFLAGS) $(OBJECTS) $(THR) -o $(NAME)
 clean:
 	/bin/rm -rf $(OBJECT)
 fclean: clean
