--- a/philo/Makefile
+++ b/philo/Makefile
@@ -2,6 +2,8 @@ NAME = philo
 CC = gcc
 CFLAGS = -std=c89 -Wall -Wextra -Werror -pedantic
 THR = -lpthread
+DEBUG = -fsanitize=thread
+
 INCLUDES = philosofers.h
 SOURCES = \
 	libft.c \
@@ -9,18 +11,27 @@ SOURCES = \
 	mutex.c \
 	pthread.c \
 	actions.c \
-	eat.c\
+	eat.c \
+	data_races.c \
 	main.c
 OBJECTS = $(SOURCES:.c=.o)
 
-.PHONY: all clean fclean f re
 
-all: $(NAME)
+ARGS = 2 600 200 200 2
+
+.PHONY: all clean fclean f re run debug
+
 $(NAME): $(OBJECTS) $(INCLUDES)
 	$(CC) $(CFLAGS) $(OBJECTS) $(THR) -o $(NAME)
+
+debug: $(OBJECTS) $(INCLUDES)
+	$(CC) $(CFLAGS) $(OBJECTS) $(THR) $(DEBUG) -o $(NAME)
+	
+all: $(NAME)
 clean:
 	/bin/rm -rf $(OBJECTS)
 fclean: clean
 	/bin/rm -rf $(NAME)
-f: fclean
 re: fclean all
+f: fclean
+run: ./$(NAME) $(ARGS)
